--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
-    "typescript": "^5.0.4",
     "eslint": "^8.16.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
     "@project-serum/borsh": "^0.2.5",
+    "@solana/spl-token": "^0.3.7",
     "@solana/web3.js": "^1.75.0",
     "@types/bn.js": "^5.1.1",
     "bn.js": "^5.2.1"
