--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "tsc -p src"
+    "build": "tsc -p src",
+    "postinstall": "yarn build"
   },
   "keywords": [
     "GooseFX",
@@ -27,6 +28,7 @@
     "@project-serum/anchor": "^0.26.0",
     "@project-serum/borsh": "^0.2.5",
     "@solana/spl-token": "^0.3.7",
+    "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/web3.js": "^1.75.0",
     "@types/bn.js": "^5.1.1",
     "axios": "^1.4.0",
