--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepare": "npm run build",
     "build": "tsc -p src",
-    "postinstall": "yarn build"
+    "postinstall": "npx tsc -p src"
   },
   "keywords": [
     "GooseFX",
