--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p src",
-    "postinstall": "npx tsc -p src"
+    "build": "tsc -p src"
   },
   "keywords": [
     "GooseFX",
